# tablesquire

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
tablesquire/server/: server.py
tablesquire/server/db/: models.py
