[metadata]
name = tablesquire
author = roaet
author-email = runningempty@gmail.com
summary = A RPG assistant
description-file = README.md
license = Apache-2
home-page = http://github.com/roaet/tablesquire
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Operating System :: OS Independent
        Programming Language :: Python
